# S3NTRACS

./: .dockerignore  .env  .gitignore  AWS_CREDENTIALS_SETUP.md  DOCUMENTATION.md  LICENSE  PROJECT_STATUS 2.md  QUICK_START 2.md  README.md  START 2.md  UI_IMPROVEMENTS 2.md  WHAT_IT_DOES 2.md  docker-compose.yml  run 2.sh
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  001_initial_migration.py  002_add_remediation_metadata.py  003_add_notification_prefs.py  004_add_scan_schedule.py  005_add_enabled_scanners.py  006_add_password_reset_fields.py
backend/app/: __init__.py  main.py
backend/app/api/: admin.py  auth.py  aws_credentials.py  deps.py  exports.py  findings.py  github.py  notifications.py  pagination.py  pdf_reports.py  reports.py  scans.py  scheduler.py  schedules.py  statistics.py  tenants.py  trends.py  websocket.py
backend/app/core/: app_config.py  config.py  logging_config.py  security.py  validation.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  alert.py  finding.py  scan_run.py  tenant.py  user.py  user_activity.py
backend/app/schemas/: __init__.py  finding.py  pagination.py  scan_run.py  tenant.py  token.py  user.py  user_activity.py
backend/app/services/: __init__.py  aws_assume.py  aws_credentials_helper.py  background_tasks.py  cloudwatch_scanner.py  ebs_scanner.py  ec2_scanner.py  iam_scanner.py  lambda_scanner.py  (+6 more)
backend/scripts/: add_scan_metadata.py  init_db.py
(+68 files in other folders)
